// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbLink check OIbLink inline 1`] = `
<div>
  <div
    class="mb-3"
    style="margin-bottom: 0px; display: inline-block;"
  >
    <input
      aria-invalid="false"
      class="oi-form-input form-control"
      id="name"
      name="name"
      type="text"
      value="http://localhost"
    />
    <div
      class="invalid-feedback"
    />
  </div>
</div>
`;

exports[`OIbLink check OIbLink with invalide value 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="name"
    >
      label
    </label>
    <input
      aria-invalid="true"
      class="oi-form-input is-invalid form-control"
      id="name"
      name="name"
      type="text"
      value="no http prefix"
    />
    <div
      class="invalid-feedback"
    >
      Value should start with any of: http://, https://
    </div>
  </div>
</div>
`;

exports[`OIbLink check OIbLink with value="http://localhost" 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="name"
    >
      label
    </label>
    <input
      aria-invalid="false"
      class="oi-form-input form-control"
      id="name"
      name="name"
      type="text"
      value="http://localhost"
    />
    <div
      class="invalid-feedback"
    />
  </div>
</div>
`;
